Реализована история просмотров с HashMap и связным списком